release/1.18/VERSION.md
# 1.18

## Version

|**Data**        | **Value**                 |
|----------------|-------------------------|
| ID   | ```1.18```   |
| Release Time   | ```2021-11-30T09:16:29+00:00```   |
| Type   | ```release```   |

## Assets

|**Data**        | **Value**                 |
|----------------|-------------------------|
| id   | ```1.18```   |
| sha1   | ```d31a2e85ae149dd1b1a7070b22cb8887892fda6c```   |
| size   | ```348724```   |
| total size  | ```468892705```  |
| url       | ```https://piston-meta.mojang.com/v1/packages/d31a2e85ae149dd1b1a7070b22cb8887892fda6c/1.18.json``` |

## Client

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```d49eb6caed53d23927648c97451503442f9e26fd```   |
| size   | ```20038427```   |
| url       | ```https://piston-data.mojang.com/v1/objects/d49eb6caed53d23927648c97451503442f9e26fd/client.jar``` |

## Server

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```3cf24a8694aca6267883b17d934efacc5e44440d```   |
| size   | ```46323386```   |
| url       | ```https://piston-data.mojang.com/v1/objects/3cf24a8694aca6267883b17d934efacc5e44440d/server.jar``` |

## Java

|**Data**        | **Value**                 |
|----------------|-------------------------|
| component   | ```java-runtime-beta```   |
| version   | ```17```   |