release/1.18.1/VERSION.md
# 1.18.1

## Version

|**Data**        | **Value**                 |
|----------------|-------------------------|
| ID   | ```1.18.1```   |
| Release Time   | ```2021-12-10T08:23:00+00:00```   |
| Type   | ```release```   |

## Assets

|**Data**        | **Value**                 |
|----------------|-------------------------|
| id   | ```1.18```   |
| sha1   | ```d31a2e85ae149dd1b1a7070b22cb8887892fda6c```   |
| size   | ```348724```   |
| total size  | ```468892705```  |
| url       | ```https://piston-meta.mojang.com/v1/packages/d31a2e85ae149dd1b1a7070b22cb8887892fda6c/1.18.json``` |

## Client

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```7e46fb47609401970e2818989fa584fd467cd036```   |
| size   | ```20042090```   |
| url       | ```https://piston-data.mojang.com/v1/objects/7e46fb47609401970e2818989fa584fd467cd036/client.jar``` |

## Server

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```125e5adf40c659fd3bce3e66e67a16bb49ecc1b9```   |
| size   | ```46324407```   |
| url       | ```https://piston-data.mojang.com/v1/objects/125e5adf40c659fd3bce3e66e67a16bb49ecc1b9/server.jar``` |

## Java

|**Data**        | **Value**                 |
|----------------|-------------------------|
| component   | ```java-runtime-beta```   |
| version   | ```17```   |